--- a/RecipeOnGo/src/global.scss
+++ b/RecipeOnGo/src/global.scss
@@ -39,6 +39,9 @@ ion-toolbar{
 ion-back-button{
     --color: white;
 }
+ion-title{
+    //font-weight: bold
+}
 
 .custom-alert .alert-button-group {
     padding: 8px;
